# PasswordManager

./: .gitignore  100kMostUsedPasswords.txt  CMakeLists.txt  Makefile  MakefileWindows.txt  README.md  build.bat  build.sh  example.txt  hashes.txt  main  main.cpp  passwordManager.cpp  passwordManager.h  run.bat  run.sh  users.txt
commonpasswords/: 100kMostUsedPasswords.txt
src/: main.cpp  passwordManager.cpp
userdata/: hashes.txt  users.txt
